tests/NormalTests/paczka1/fuzzy1/42269440.err
Error in line 10: Xkkhksmar M659 81,9
Error in line 17: ZcDI S790 4,49
Error in line 4: Xkkhksmar S659 65,5
Error in line 16: by9UwIzDB S659 49,6
Error in line 19: TC2Lqtvm S790 61,9
Error in line 27: by9UwIzDB A27 21,3
Error in line 29: ZcDI S659 36,9
Error in line 28: TC2Lqtvm A27 97,4
